[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpsctrl"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
    "pyserial >= 3.5",
]
description = "DPS5005 control script"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/git-dimiz/dpsctrl"
"Bug Tracker" = "https://github.com/git-dimiz/dpsctrl/issues"
